Small corrections in [Vectorial_space__CheatSheet.*]

--- a/1.Maths/8.Vectorial_space_cheat_sheet/Vectorial_space_CheatSheet.tex
+++ b/1.Maths/8.Vectorial_space_cheat_sheet/Vectorial_space_CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.03.19
+% Last modification     :   2022.03.23
 %
 %------------------------------------------------------------------------
 
@@ -776,7 +776,7 @@
         \begin{indt}{\subsection{Théorème de la base incomplète}}
             Soit $E$ un espace vectoriel de dimension finie, $r \in \N^*$, $n = \dim(E)$, et $\mathcal F = (y_k)_{k \in \nset 1 r}$ une famille libre de $E$.
             
-            Alors $\exists (y_k)_{k \in \nset{p + 1}{n}} \ |\ (y_k)_{k \in \nset 1 n}$ soit une base de $E$.
+            Alors $\exists (y_k)_{k \in \nset{r + 1}{n}} \subset E \ |\ (y_k)_{k \in \nset 1 n}$ soit une base de $E$.
         \end{indt}
         
         \vspace{12pt}
