Correcting Asymptotic_comparisons
Correcting the definition of the big O notation.

--- a/1.Maths/2.Asymptotic_comparisons__cheat_sheet/Asymptotic_comparisons__CheatSheet.tex
+++ b/1.Maths/2.Asymptotic_comparisons__cheat_sheet/Asymptotic_comparisons__CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2021.11.20
+% Last modification     :   2022.06.12
 %
 %------------------------------------------------------------------------
 
@@ -240,7 +240,7 @@
         
         $(u_n)$ est \emph{dominée} par $(v_n)$ :
         \vspace{-12pt}
-        \[u_n = O(v_n) \ssi \exists (M, m) \in \C\ \left|\vphantom{\dfrac a b}\right.\ m \le \dfrac{u_n}{v_n} \le M \]
+        \[u_n = O(v_n) \ssi \exists (M, n_0) \in \R \times \N\ |\ \forall n \in \N,\ n \ge n_0 \Rightarrow \abs{\dfrac{u_n}{v_n}} \le M \]
         
         \vspace{6pt}
         
