Correction in Analysis_CheatSheet
correction in 3.1.1 : changing `f_{\rm r}` to `f_{\rm d}`.

--- a/1.Maths/9.Analysis_cheat_sheet/Analysis_CheatSheet.tex
+++ b/1.Maths/9.Analysis_cheat_sheet/Analysis_CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.07.03
+% Last modification     :   2022.07.10
 %
 %------------------------------------------------------------------------
 
@@ -1082,7 +1082,7 @@
                         \begin{array}{|l}
                             f_{\rm g}'(a) = \displaystyle \lim_{x \to a^-} \tau_a(x)
                             \\
-                            f_{\rm r}'(a) = \displaystyle \lim_{x \to a^+} \tau_a(x)
+                            f_{\rm d}'(a) = \displaystyle \lim_{x \to a^+} \tau_a(x)
                         \end{array}
                     }
                 \]
