--- a/1.MP2I/2.Physics/Mechanics_theorems/Physics_mechanics_theorems.tex
+++ b/1.MP2I/2.Physics/Mechanics_theorems/Physics_mechanics_theorems.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.09.10
+% Last modification     :   2022.09.17
 %
 %------------------------------------------------------------------------
 
@@ -665,6 +665,8 @@
             
             \begin{indt}{\subsubsection{Bras de levier}}
                 Soit $M$ un point soumis à une force $\vec f$, $A$ un point quelconque, et $\Delta$ l'axe passant par $A$ perpendiculaire au plan formé par $\vect{AM}$ et $\vec f$, orienté par un vecteur unitaire $\vect{u_\Delta}$.
+                
+                Soit $H$ le projeté orthogonal de $A$ sur la droite d'action de $\vec f$.
 
                 \vspace{6pt}
                 
@@ -672,6 +674,33 @@
                 \[
                     \vect{\mathscr M_A}\!\lr{\vec f} = \mathscr M_\Delta\!\lr{\vec f} \cdot \vect{u_\Delta}
                 \]
+                et :
+                \[
+                    \norm{\vect{\mathscr M_A}\!\lr{\vec f}} = \abs{\mathscr M_\Delta\!\lr{\vec f}}
+                    = \norm{\vect{AH}} \cdot \norm{\vec f}
+                \]
+
+                \vspace{6pt}
+                
+                \begin{center}
+                    \begin{tikzpicture}[scale=1.3]
+                        \node (A) at (0, 0) [label=above left:$A$] {$+$};
+                        \node (M) at (4, 1) [label=above right:$M$] {$+$};
+
+                        \draw [dashed] (2, 3) to (6, -1);
+
+                        \draw[-latex] (0, 0) to (4, 1);
+                        \draw[color=ff4500, -latex] (4, 1) to (5, 0);
+
+                        \node (f) at (5, 0) [label=above right:${\vec f}$] {};
+
+                        \node (u) at (-1, 2) [label=above right:${\vect{u_\Delta}}$] {$\odot$};
+
+                        \node (H) at (2.5, 2.5) [label=above right:$H$] {};
+
+                        \draw [dashed] (2.53, 2.53) to (0, 0);
+                    \end{tikzpicture}
+                \end{center}
             \end{indt}
         \end{indt}
 
